# evm-tester

./: .gitignore  Cargo.toml  README.md
huff/: addition.huff
move/: huff_test.move  test2_test.move
resources/arith/: add.bytecode  add_overflow.bytecode  addmod.huff  addmod_single_item.bytecode  div.bytecode  div_by_huge.bytecode  div_by_zero.bytecode  div_single_item.bytecode  exp.huff  exp_single_item.bytecode  mod.huff  mod_single_item.bytecode  mul.bytecode  mul_overflow.bytecode  mulmod.huff  sdiv.bytecode  sdiv_by_huge.bytecode  sdiv_by_zero.bytecode  signextend.huff  signextend_single_item.bytecode  smod.huff  sub.bytecode  sub_underflow.bytecode  testcase.json
resources/bytecode/: addition_b.bytecode  storage.bytecode
resources/bytecode/subtraction/: state.json
resources/huff/addition/: state.json
resources/inputs/: huff.input.json  test2.input.json
resources/outputs/: huff.output.json  test2.output.json
resources/tg1/: add1.huff  add2.bytecode
resources/tg1/subtraction/: state.json  subtraction.bytecode
resources/tg2/: storage.bytecode
resources/tg2/addition/: addition.huff  state.json
src/: main.rs
src/core/: mod.rs
src/executor/: executor.rs
src/mover/: mover.rs
src/reader/: mod.rs
