[package]
name = "evm-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
primitive-types = { version = "0.11", default-features = false, features = ["rlp"] }
evm = "0.35.0"
hex = "0.4.3"
string-builder = "0.2.0"